--- a/todowithnext/package.json
+++ b/todowithnext/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.1",
+    "axios": "^1.5.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "framer-motion": "^10.16.4",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
